Cambio de script, quito funcionalidades de node.js para Flask
Node utilizaba un DOM virtual para midificar el estilo en base a respuesta del servidor, ahora Flask no necesita DOM virtual, itera cada div modificando el css en base a respuesta del servidor.

--- a/actualizaPlan/static/css/styles.css
+++ b/actualizaPlan/static/css/styles.css
@@ -247,6 +247,8 @@ section {
 }
 
 .pendiente{ background: rgb(52, 54, 61); }
-.aprobada{ background: rgb(75, 155, 87); }
+.aprobada{ background: aliceblue; }
 .examen{ background: rgb(236, 225, 19) }
 .tutoria{ background: rgb(210, 53, 44); }
+
+.puedeCursar{ background: rgb(75, 155, 87); }
