--- a/actualizaPlan/templates/index.html
+++ b/actualizaPlan/templates/index.html
@@ -12,10 +12,11 @@
 
     <!-- Estilos -->    
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-    
+
     <!-- Sccripts -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <title>Cambio de planes</title>
 </head>
